Polish JavaDoc, fix spelling and IDE warnings